--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect;
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myapp;
+spring.datasource.username="root";
+spring.datasource.password="QAZwsx!@#456";
